TextHtml: fix message alignment in Safari

--- a/src/app/components/message/message.component.scss
+++ b/src/app/components/message/message.component.scss
@@ -4,7 +4,7 @@
     flex: 1 1 auto;
 
     &.mine {
-        justify-content: end;
+        justify-content: flex-end;
     }
 
     .bubble {
